crates/rome_formatter/tests/specs/prettier/js/line-suffix-boundary/boundary.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: boundary.js

---
# Input
```js
`${
a +  // a
  a
}

${a // comment
}

${b /* comment */}

${/* comment */ c /* comment */}

${// comment
d //comment
}

${// $FlowFixMe found when converting React.createClass to ES6
ExampleStory.getFragment('story')}
`;

<div>
{ExampleStory.getFragment('story') // $FlowFixMe found when converting React.createClass to ES6
}
</div>;

```

# Output
```js
`${
  a + // a
  a
}

${
  a // comment
}

${b /* comment */ }

${ /* comment */ c /* comment */ }

${
  // comment
  d //comment
}

${
  // $FlowFixMe found when converting React.createClass to ES6
  ExampleStory.getFragment("story")
}
`;

<div>
{ExampleStory.getFragment('story') // $FlowFixMe found when converting React.createClass to ES6
}
</div>;

```

# Errors
```
error[SyntaxError]: JSX elements are a JSX only feature. Convert your file to a JSX file or remove the syntax.
   ┌─ boundary.js:21:1
   │  
21 │ ┌ <div>
22 │ │ {ExampleStory.getFragment('story') // $FlowFixMe found when converting React.createClass to ES6
23 │ │ }
<<<<<<< HEAD
   │ └─^ TypeScript only syntax

error[SyntaxError]: Expected an expression for the right hand side of a `<`, but found an operator instead
   ┌─ boundary.js:24:2
   │
24 │ </div>;
   │ -^ But this operator was encountered instead
   │ │ 
   │ This operator requires a right hand side value

error[SyntaxError]: expected an expression but instead found ';'
   ┌─ boundary.js:24:7
   │
24 │ </div>;
   │  -     ^ ...but the line ends here
   │  │     
   │  a regex literal starts there...
=======
24 │ │ </div>;
   │ └──────^ JSX only syntax
>>>>>>> 5e7841b546 (update rast/snap files)


```


